change static file path

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                             <!-- <link href="assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css"/> -->
                         <!--end::Vendor Stylesheets-->
                     <!--begin::Global Stylesheets Bundle(mandatory for all pages)-->
-                            <link href="/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css"/>
-                            <link href="/assets/css/style.bundle.css" rel="stylesheet" type="text/css"/>
+                            <link href="./assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css"/>
+                            <link href="./assets/css/style.bundle.css" rel="stylesheet" type="text/css"/>
                         <!--end::Global Stylesheets Bundle-->
         <script>
             // Frame-busting to prevent site from being loaded within a frame without permission (click-jacking)
@@ -216,8 +216,8 @@
         <script>
             var hostUrl = "assets/";        </script>
                     <!--begin::Global Javascript Bundle(mandatory for all pages)-->
-                            <script src="/assets/plugins/global/plugins.bundle.js" is:inline></script>
-                            <script src="/assets/js/scripts.bundle.js" is:inline></script>
+                            <script src="./assets/plugins/global/plugins.bundle.js" is:inline></script>
+                            <script src="./assets/js/scripts.bundle.js" is:inline></script>
 
 		<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>    
 			</body>
