--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 {"scope": "중환자 관리", "task": "응급상황 심폐소생술", "count": 0},
                 {"scope": "중환자 관리", "task": "응급약물 투여", "count": 0},
                 {"scope": "중환자 관리", "task": "L-tube 발관", "count": 0},
-                {"scope": "동의서 작성", "task": "검사 ㅁ치 시술 동의서 초안 작성<br>★의사작성: 수숭, 마취, 응급수혈, DNR, 무연고자환자관련", "count": 0},
+                {"scope": "동의서 작성", "task": "검사 및 시술 동의서 초안 작성<br>★의사작성: 수숭, 마취, 응급수혈, DNR, 무연고자환자관련", "count": 0},
                 {"scope": "환자 평가/교육", "task": "환자,보호자 교육 및 상담", "count": 0},
                 {"scope": "환자 평가/교육", "task": "중증환자 검사를 위한 이송 모니터링 담당", "count": 0},
                 {"scope": "기타", "task": "Drainage bag change", "count": 0},
