--- a/index.html
+++ b/index.html
@@ -2,18 +2,10 @@
 <html lang="ko" >
     <!--begin::Head-->
     <head><base href=""/>
-        <title>Keen - Multi-demo Bootstrap 5 HTML Admin Dashboard Template by KeenThemes</title>
+        <title>처치간호사 일일 업무량</title>
         <meta charset="utf-8"/>
-        <meta name="description" content="The most advanced Bootstrap Admin Theme on Bootstrap Market trusted by over 4,000 beginners and professionals. Multi-demo, Dark Mode, RTL support. Grab your copy now and get life-time updates for free."/>
-        <meta name="keywords" content="keen, bootstrap, bootstrap 5, bootstrap 4, admin themes, web design, figma, web development, free templates, free admin themes, bootstrap theme, bootstrap template, bootstrap dashboard, bootstrap dak mode, bootstrap button, bootstrap datepicker, bootstrap timepicker, fullcalendar, datatables, flaticon"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <meta property="og:locale" content="en_US" />
-        <meta property="og:type" content="article" />
-        <meta property="og:title" content="Keen - Multi-demo Bootstrap 5 HTML Admin Dashboard Template by KeenThemes" />
-        <meta property="og:url" content="https://keenthemes.com/keen"/>
-        <meta property="og:site_name" content="Keen by Keenthemes" />
-        <link rel="canonical" href="http://preview.keenthemes.com?page=index"/>
-        <link rel="shortcut icon" href="assets/media/logos/favicon.ico"/>
+        <link rel="shortcut icon" href="./assets/media/logos/favicon.ico"/>
         <!--begin::Fonts(mandatory for all pages)-->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700"/>        <!--end::Fonts-->
                     <!--begin::Vendor Stylesheets(used for this page only)-->
