--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 { "scope": "검사2", "task": "직장 수지 검사(DRE)", "count": 0 },
                 { "scope": "검사2", "task": "COVID-19 검사", "count": 0 },
                 { "scope": "치료 및 처치1", "task": "단순 드레싱(일반, 시술 상처 등)", "count": 0 },
-                { "scope": "치료 및 처치1", "task": "복합 드레싱(catheter, tube등)<br/>**수술부위는 급성기 이후 가능", "count": 0 },
+                { "scope": "치료 및 처치1", "task": "복합 드레싱(catheter, tube등)<br/>**수술부위는 임상과에서 시행", "count": 0 },
                 { "scope": "치료 및 처치1", "task": "발사 자체(stitch out)", "count": 0 },
                 { "scope": "치료 및 처치1", "task": "배액관 제거(흉강 배액관, 복강 배액관, 창상 등)<br/>**chest tube, pericardial cath, Homovac, Barovac 제외", "count": 0 },
                 { "scope": "치료 및 처치1", "task": "누공 관리 및 제거<br>(위루관 또는 장루관, 방광루관 등)", "count": 0 },
@@ -186,7 +186,7 @@
                 { "scope": "중환자 관리", "task": "응급상황 심폐소생술", "count": 0 },
                 { "scope": "중환자 관리", "task": "응급약물 투여", "count": 0 },
                 { "scope": "중환자 관리", "task": "L-tube 발관", "count": 0 },
-                { "scope": "동의서 작성", "task": "검사 및 시술 동의서 초안 작성<br>★의사작성: 수숭, 마취, 응급수혈, DNR, 무연고자환자관련", "count": 0 },
+                { "scope": "동의서 작성", "task": "검사 및 시술 동의서 초안 작성<br>★의사작성: 수술, 마취, 응급수혈, DNR, 무연고자환자관련", "count": 0 },
                 { "scope": "환자 평가/교육", "task": "환자,보호자 교육 및 상담", "count": 0 },
                 { "scope": "환자 평가/교육", "task": "중증환자 검사를 위한 이송 모니터링 담당", "count": 0 },
                 { "scope": "기타", "task": "Drainage bag change", "count": 0 },
