--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
                 { "code": "W16", "depths": ["13동", "9동", "9서", "8동", "8서"], "callphone": "85168(#6)", "position": "8서" },
                 { "code": "W17", "depths": ["7동", "7서", "6동", "6서", "5서", "4서"], "callphone": "85169(#7)", "position": "7서" },
                 { "code": "W18", "depths": ["9동", "9서"], "callphone": "85166(#4)", "position": "9동" },
-                { "code": "I01", "depths": ["SICU", "NCUA"], "callphone": "85172(#10)", "position": "5ICU" },
+                { "code": "I01", "depths": ["5ICU", "NCUA"], "callphone": "85172(#10)", "position": "5ICU" },
                 { "code": "I02", "depths": ["ICUA", "ICUB", "CCU", "NCUB"], "callphone": "85175(#11)", "position": "ICUA" },
-                { "code": "I03", "depths": ["SICU", "NCUA", "ICUA", "ICUB", "CCU", "NCUB"], "callphone": "85172(#10)", "position": "5ICU" },
-                { "code": "I04", "depths": ["SICU", "NCUA", "ICUA", "ICUB", "CCU", "NCUB"], "callphone": "85172(#10)", "position": "5ICU" }
+                { "code": "I03", "depths": ["5ICU", "NCUA", "ICUA", "ICUB", "CCU", "NCUB"], "callphone": "85172(#10)", "position": "5ICU" },
+                { "code": "I04", "depths": ["5ICU", "NCUA", "ICUA", "ICUB", "CCU", "NCUB"], "callphone": "85172(#10)", "position": "5ICU" }
             ];
 
 
