--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
                 { "code": "W08", "depths": ["6서"], "callphone": "85170(#8)", "position": "6서" },
                 { "code": "W09", "depths": ["5서", "4서"], "callphone": "85171(#9)", "position": "5서" },
                 { "code": "W10", "depths": ["13서", "12동", "11동"], "callphone": "85163(#1)", "position": "13서" },
-                { "code": "W11", "depths": ["11서", "10동", "10서", "완화", "이식", "13동"], "callphone": "85164(#2)", "position": "11서" },
+                { "code": "W11", "depths": ["13동", "11서", "10동", "10서", "완화", "이식"], "callphone": "85164(#2)", "position": "11서" },
                 { "code": "W12", "depths": ["9동", "9서", "SU", "8동", "8서"], "callphone": "85168(#6)", "position": "8서" },
                 { "code": "W13", "depths": ["7동", "7서", "6동"], "callphone": "85169(#7)", "position": "7서" },
                 { "code": "W14", "depths": ["6서", "5서", "4서"], "callphone": "85171(#9)", "position": "5서" },
                 { "code": "W15", "depths": ["13서", "12동", "12서", "11동", "11서", "10동", "10서", "완화", "이식"], "callphone": "85163(#1)", "position": "13서" },
                 { "code": "W16", "depths": ["13동", "9동", "9서", "SU", "8동", "8서"], "callphone": "85168(#6)", "position": "8서" },
                 { "code": "W17", "depths": ["7동", "7서", "6동", "6서", "5서", "4서"], "callphone": "85169(#7)", "position": "7서" },
-                { "code": "W18", "depths": ["9동", "9서"], "callphone": "85166(#4)", "position": "9동" },
+                { "code": "W18", "depths": ["9동", "SU", "9서"], "callphone": "85166(#4)", "position": "9동" },
                 { "code": "I01", "depths": ["5ICU", "NCUA"], "callphone": "85172(#10)", "position": "5ICU" },
                 { "code": "I02", "depths": ["ICUA", "ICUB", "CCU", "NCUB"], "callphone": "85175(#11)", "position": "ICUA" },
                 { "code": "I03", "depths": ["5ICU", "NCUA", "ICUA", "ICUB", "CCU", "NCUB"], "callphone": "85172(#10)", "position": "5ICU" },
