--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
                 { "code": "I01", "depths": ["5ICU", "NCUA"], "callphone": "85172(#10)", "position": "5ICU" },
                 { "code": "I02", "depths": ["ICUA", "ICUB", "CCU", "NCUB"], "callphone": "85175(#11)", "position": "ICUA" },
                 { "code": "I03", "depths": ["5ICU", "NCUA", "ICUA", "ICUB", "CCU", "NCUB"], "callphone": "85172(#10)", "position": "5ICU" },
-                { "code": "I04", "depths": ["5ICU", "NCUA", "ICUA", "ICUB", "CCU", "NCUB"], "callphone": "85172(#10)", "position": "5ICU" }
+                { "code": "I04", "depths": ["5ICU", "NCUA", "ICUA", "ICUB", "CCU", "NCUB"], "callphone": "85172(#10)", "position": "5ICU" },
+                { "code": "ET", "depths": ["T51W", "T41W", "TICUC", "TICUB", "TICUA", "E41W", "EICU", "ER"], "callphone": "85176(#12),85177(#13)", "position": "ER" },
             ];
 
 
