--- a/index.html
+++ b/index.html
@@ -173,43 +173,53 @@
 
 
             const defaultItems = [
-                { "scope": "검사1", "task": "혈액배양검사(Blood culture)", "count": 0 },
-                { "scope": "검사1", "task": "nasal swap culture", "count": 0 },
-                { "scope": "검사1", "task": "suction tip culture", "count": 0 },
-                { "scope": "검사1", "task": "동맥 천자를 통한 동맥혈 채취", "count": 0 },
-                { "scope": "검사1", "task": "응급 상황에서의 동맥혈 채취", "count": 0 },
-                { "scope": "검사2", "task": "심전도(19:00 처방 부터 수행)", "count": 0 },
-                { "scope": "검사2", "task": "초음파(잔뇨량체크)", "count": 0 },
-                { "scope": "검사2", "task": "wound swab, culture", "count": 0 },
-                { "scope": "검사2", "task": "직장 검체 채취(rectal swab)", "count": 0 },
-                { "scope": "검사2", "task": "직장 수지 검사(DRE)", "count": 0 },
-                { "scope": "검사2", "task": "COVID-19 검사", "count": 0 },
-                { "scope": "치료 및 처치1", "task": "단순 드레싱(일반, 시술 상처 등)", "count": 0 },
-                { "scope": "치료 및 처치1", "task": "복합 드레싱(catheter, tube등)<br/>**수술부위는 임상과에서 시행", "count": 0 },
-                { "scope": "치료 및 처치1", "task": "발사 자체(stitch out)", "count": 0 },
-                { "scope": "치료 및 처치1", "task": "배액관 제거(흉강 배액관, 복강 배액관, 창상 등)<br/>**chest tube, pericardial cath, Homovac, Barovac 제외", "count": 0 },
-                { "scope": "치료 및 처치1", "task": "누공 관리 및 제거<br>(위루관 또는 장루관, 방광루관 등)", "count": 0 },
-                { "scope": "치료 및 처치2", "task": "유치 도뇨관(foley catheter) 삽입<br>★소아는 의사가 실행", "count": 0 },
-                { "scope": "치료 및 처치2", "task": "각종 카테터 제거<br>(Mahurkar, Perm, PICC, chemoport 등)", "count": 0 },
-                { "scope": "치료 및 처치2", "task": "C-line 제거 ★RRT 간호사 수행", "count": 0 },
-                { "scope": "치료 및 처치2", "task": "Chemoport needing", "count": 0 },
-                { "scope": "치료 및 처치2", "task": "Tracheostomy tube 드레싱", "count": 0 },
-                { "scope": "치료 및 처치2", "task": "감염 욕창드레싱", "count": 0 },
-                { "scope": "치료 및 처치2", "task": "혈관 중재적 시술 후 지혈용 Q-pad 제거", "count": 0 },
-                { "scope": "치료 및 처치2", "task": "Retension enema", "count": 0 },
-                { "scope": "치료 및 처치2", "task": "Tube irrigation<br>(PCD, PTBD, PTBGD, Bladder, L tube 등)", "count": 0 },
-                { "scope": "치료 및 처치2", "task": "Rectal tube insertion", "count": 0 },
-                { "scope": "치료 및 처치2", "task": "A-line insertion", "count": 0 },
-                { "scope": "중환자 관리", "task": "응급상황 심폐소생술", "count": 0 },
-                { "scope": "중환자 관리", "task": "응급약물 투여", "count": 0 },
-                { "scope": "중환자 관리", "task": "L-tube 발관", "count": 0 },
-                { "scope": "동의서 작성", "task": "검사 및 시술 동의서 초안 작성<br>★의사작성: 수술, 마취, 응급수혈, DNR, 무연고자환자관련", "count": 0 },
-                { "scope": "환자 평가/교육", "task": "환자,보호자 교육 및 상담", "count": 0 },
-                { "scope": "환자 평가/교육", "task": "중증환자 검사를 위한 이송 모니터링 담당", "count": 0 },
-                { "scope": "기타", "task": "Drainage bag change", "count": 0 },
-                { "scope": "기타", "task": "진정환자 모니터링", "count": 0 },
-                { "scope": "기타", "task": "Shaving", "count": 0 },
-                { "scope": "기타", "task": "사후처치 **Suture 제외", "count": 0 },
+                { "scope": "", "task": "1.  검사 및 시술 동의서 소인 작성<br/> *의사작성: 수술, 마취, 응급수혈, DNR, 무연고환자관련", "count": 0 },
+                { "scope": "", "task": "2. 심전도(19:00 처방 부터 수행)", "count": 0 },
+                { "scope": "", "task": "3. 혈액 배양검사(Blood culture)", "count": 0 },
+                { "scope": "", "task": "4. Nasal swab (Culture / 호흡기 PCR / COVID-19)", "count": 0 },
+                { "scope": "", "task": "5. ABGA, 동맥혈 채취 - 응급상황 포함", "count": 0 },
+                { "scope": "", "task": "6. Wound swab, culture", "count": 0 },
+                { "scope": "", "task": "7. 직장 검체 채취(rectal swab)", "count": 0 },
+                { "scope": "", "task": "8. 직장 수지 검사(DRE)", "count": 0 },
+                { "scope": "", "task": "9. Tip culture (ET-tube, Drain)", "count": 0 },
+                { "scope": "", "task": "10. 단순 드레싱 (일반 상처, 시술 상처, Tracheostomy tube 등)", "count": 0 },
+                { "scope": "", "task": "11. 카테터 드레싱(각종 배액관, 중심정맥관 등)", "count": 0 },
+                { "scope": "", "task": "12. 급성기 이후 수술부위 드레싱", "count": 0 },
+                { "scope": "", "task": "13. 감염 욕창드레싱 (Silmazine 등)", "count": 0 },
+                { "scope": "", "task": "14. 누공 관리 및 재거 (위루관 또는 장루관, 방광루관 등)", "count": 0 },
+                { "scope": "", "task": "15. 혈관 중재적 시술 후 지혈용 Q-pad 제거", "count": 0 },
+                { "scope": "", "task": "16. 봉합 발사(stitch out)", "count": 0 },
+                { "scope": "", "task": "17. 각종 카테터 제거 (Mahurkar, Perm, PICC등)", "count": 0 },
+                { "scope": "", "task": "18. 배액관 제거(흉강/복강 배액관, 창상 등)<br/> **chest tube, pericardial cath, HV, BV제외", "count": 0 },
+                { "scope": "", "task": "19. Tube irrigation(PCD, PTBD, PTGBD, Bladder, L-tube 등)", "count": 0 },
+                { "scope": "", "task": "20. A-line insertion", "count": 0 },
+                { "scope": "", "task": "21. A-line, A-port, Vein sheath, Para needle, External jugular line 제거", "count": 0 },
+                { "scope": "", "task": "22. Chemoport needling", "count": 0 },
+                { "scope": "", "task": "23. Heparinization(PICC, Chemoport needle remove 등)", "count": 0 },
+                { "scope": "", "task": "24. L-tube 발관 / 깊이 조절", "count": 0 },
+                { "scope": "", "task": "25. Foley cath remove", "count": 0 },
+                { "scope": "", "task": "26. 유치 도뇨관(foley catheter) 삽입<br/> * 소아는 의사가 시행", "count": 0 },
+                { "scope": "", "task": "27. Nelaton catheterization", "count": 0 },
+                { "scope": "", "task": "28. Retention enema", "count": 0 },
+                { "scope": "", "task": "29. Glycerin enema", "count": 0 },
+                { "scope": "", "task": "30. Suppot(좌약) 투여", "count": 0 },
+                { "scope": "", "task": "31. Rectal tube insertion", "count": 0 },
+                { "scope": "", "task": "32. Drainage bag change (Chest bottle 비우기 등)", "count": 0 },
+                { "scope": "", "task": "33. Shaving", "count": 0 },
+                { "scope": "", "task": "34. 중증환자 검사를 위한 이송 모니터링 담당", "count": 0 },
+                { "scope": "", "task": "35. 응급상황 심폐소생술", "count": 0 },
+                { "scope": "", "task": "36. 응급약물 / 주의를 요하는 약물 투여", "count": 0 },
+                { "scope": "", "task": "37. 진정환자 모니터링 (진정약물 투여, 진정기록지 작성)", "count": 0 },
+                { "scope": "", "task": "38. Ambu-bagging (Circuit change 포함)", "count": 0 },
+                { "scope": "", "task": "39. 환자, 보호자 교육 및 상담", "count": 0 },
+                { "scope": "", "task": "40. 사후처치 (Skin Stapler suture 가능)", "count": 0 },
+                { "scope": "", "task": "41. 초음파(잔뇨량체크)", "count": 0 },
+                { "scope": "", "task": "42. FHR 측정", "count": 0 },
+                { "scope": "", "task": "43. 3-phase BP 측정", "count": 0 },
+                { "scope": "", "task": "44. 복부 / 허벅지 둘레 측정", "count": 0 },
+                { "scope": "", "task": "45. Bosmin packing", "count": 0 },
+                { "scope": "", "task": "46. ER 선처방", "count": 0 },
+                { "scope": "", "task": "47. 기타 (각 병동별 사례별 간호 각각 입력)", "count": 0 }
             ];
 
             const getStorageKey = (key, code) => `${key}_${code}`;
